force-app/main/default/objects/ccrz__E_OrderTerm__c/ccrz__E_OrderTerm__c.object-meta.xml
<CustomObject>
    <description>The E_OrderTerm__c object contains the agreed to terms from the ccrz__E_Term__c object(s) agreed to at the time the order was placed.</description>
    <label>CC Order Term</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CC Order Term Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>