force-app/main/default/objects/ccrz__E_OrderTerm__c/fields/ccrz__Description__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Description__c</fullName>
    <description>The terms agreed to.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>