force-app/main/default/objects/ccrz__E_OrderTerm__c/fields/ccrz__Order__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Order__c</fullName>
    <description>The order these terms refer to.</description>
    <label>Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>CC Order Terms</relationshipLabel>
    <relationshipName>OrderTerms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>