force-app/main/default/objects/ccrz__E_OrderTerm__c/fields/ccrz__Title__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Title__c</fullName>
    <description>The title of the terms agreed to.</description>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>